logando com google e github

--- a/src/main/resources/ValidationMessages_pt_BR.properties
+++ b/src/main/resources/ValidationMessages_pt_BR.properties
@@ -1,4 +1,4 @@
-task.title.notblank=tÌtulo È obrigatÛrio
-task.description.size=descriÁ„oo deve ter pelo menos {min} caracteres
+task.title.notblank=t√≠tulo √© obrigat√≥rio
+task.description.size=descri√ß√£oo deve ter pelo menos {min} caracteres
 task.score.min=deve ser pelo menos {value}
-task.score.max=deve ser no m·ximo {value}
+task.score.max=deve ser no m√°ximo {value}
